tests/outcomes/syntax_error/test_error_using_eval_and_print/main.py
print("123")
print(eval(")"))
